fixed a spacing issue and added the dist

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -143,7 +143,6 @@ body {
     font-weight:300;
     margin-bottom:2em;
     text-align:left;
-    margin:0 0 0.8em 0;
     @media (max-width: $screen-sm) {
         text-align:center;
     }
